@@ -1615,3 +1615,9 @@ Sudo 1.6.7p1 released.
      caused problems on Tru64 Unix.
 
 Sudo 1.6.7p2 released.
+
+507) Kerberos V support should work on latest MIT Kerberos V and Heimdal.
+
+Sudo 1.6.7p3 released.
+
+508) BSD-style warn/err functions are now used throughout.
